border added in checkout page

--- a/P02 Team 03/checkout.html
+++ b/P02 Team 03/checkout.html
@@ -42,7 +42,8 @@
                 <label for="deliveryop">Custom Amount</label>
                 <br>
                 <input type="text" id="card_name" name="cardnname" class="input-text"><br>
-                <br><br>
+                <div class="bottom-border"></div>
+                <br>
                 <input type="radio" id="delivery" name="deliveryop" value="deliveryoption">
                 <label for="deliveryop">Delivery</label>
                 <input type="radio" id="pickup" name="deliveryop" value="deliveryoption">
