contact page added

--- a/P02 Team 03/contact.html
+++ b/P02 Team 03/contact.html
@@ -27,6 +27,37 @@
         <!-- Title -->
         <div class="top-border">
             <h1>**CONTACT - TEMPLATE LANDING PAGE**</h1>
+            <div class="contact-flex-item">
+                <h3>Contact Us</h3>
+                <p>778-000-1234</p>
+                <p>glo-dough@gmail.com</p>
+                <i class="bi-facebook"></i>
+                <i class="bi-twitter"></i>
+                <i class="bi-instagram"></i>
+                
+            </div>
+            <div class="contact-flex-item">
+                <h3>Store Location</h3>
+                <p>1234 St. Address</p>
+                <p>Surrey, B.C.</p>
+                <p>VVV 123</p>
+            </div>
+            <br><br>
+            <label for="first_name">First Name</label><br>
+            <input type="text" id="contact_name" name="firstname" class="input-text"><br><br>
+            <label for="last_name">Last Name</label><br>
+            <input type="text" id="contact_surname" name="lastname" class="input-text"><br><br>
+            <label for="email">Email</label><br>
+            <input type="text" id="contact_email" name="email" class="input-text"><br><br>
+            <label for="subject">Subject</label><br>
+            <input type="text" id="contact_subject" name="contactsub" class="input-text"><br> <br>
+            <label for="card_number">Message</label><br>
+            <input type="text" id="contact_msg" name="msg" class="input-text"><br><br>
+            <input type="checkbox" id="bill-ship">
+            <label for="bill-ship"> Submit anonymously </label><br><br>
+            <input type="submit" class="button-yellow" value="Submit">
+            <h2>Thank you for the feedback!</h2>
+            <div class="bottom-border"></div>
         </div>
 
 
