about us page added

--- a/P02 Team 03/about-us.html
+++ b/P02 Team 03/about-us.html
@@ -27,9 +27,11 @@
         <!-- Title -->
         <div class="top-border">
             <h1>**ABOUT US - TEMPLATE LANDING PAGE**</h1>
+            <div class="about-us-text">
+            <h3>The story of Glow In The Dough begins on the brick laid streets of Vancouver’s famous Gastown. It is here that Glow In The Dough opened its doors, offering hot pies and refreshing drinks. The origin of our name comes from our love for fun, vibrant neon signs, and dedication to fresh ingredients and delicious pies. We believe that communities come together when sharing a meal. That is why we’ve created an environment for the community to grow every day. </h3>
+            </div>
+            <img src="assets/glow-in-the-dough-textless.png">
         </div>
-
-
 
     </div>
 
