--- a/P02 Team 03/order.html
+++ b/P02 Team 03/order.html
@@ -29,6 +29,34 @@
             <h1>**ORDER - TEMPLATE LANDING PAGE**</h1>
         </div>
 
+        <h2>Menu</h2>
+        <div class="menu-container top-border">
+
+            <!-- Item -->
+            <div>
+                <a href="order/pizzas.html"><img class="menu-img" src="assets/glow-in-the-dough-textless.png"></a>
+                <h3>Pizzas</h3>
+            </div>
+                
+            <!-- Item -->
+            <div>
+                <img class="menu-img" src="assets/glow-in-the-dough-textless.png">
+                <h3>Pastas</h3>
+            </div>
+
+            <!-- Item -->
+            <div>
+                <img class="menu-img" src="assets/glow-in-the-dough-textless.png">
+                <h3>Sides</h3>
+            </div>
+
+            <!-- Item -->
+            <div>
+                <img class="menu-img" src="assets/glow-in-the-dough-textless.png">
+                <h3>Drinks & Desserts</h3>
+            </div>
+        </div>
+
 
 
     </div>
