--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -29,6 +29,23 @@
             <h1>Glow-in-the-Dough Landing Page</h1>
         </div>
 
+        <div class="flex-container">
+
+            <div class="flex-item">
+                <img class="menu-img" src="assets/glow-in-the-dough.png">
+
+            </div>
+
+            <div class="flex-item">
+                <h2>Since 2023</h2>
+
+                <a href="order.html" class="button-yellow">Order Now</a>
+                <div></div>
+                <a href="order.html" class="button-yellow">Menu</a>
+            </div>
+
+        </div>
+
 
 
     </div>
