--- a/P02 Team 03/order.html
+++ b/P02 Team 03/order.html
@@ -40,19 +40,19 @@
                 
             <!-- Item -->
             <div>
-                <img class="menu-img" src="assets/glow-in-the-dough-textless.png">
+                <a href="order/pastas.html"><img class="menu-img" src="assets/glow-in-the-dough-textless.png"></a>
                 <h3>Pastas</h3>
             </div>
 
             <!-- Item -->
             <div>
-                <img class="menu-img" src="assets/glow-in-the-dough-textless.png">
+                <a href="order/sides.html"><img class="menu-img" src="assets/glow-in-the-dough-textless.png"></a>
                 <h3>Sides</h3>
             </div>
 
             <!-- Item -->
             <div>
-                <img class="menu-img" src="assets/glow-in-the-dough-textless.png">
+                <a href="order/drinks-desserts.html"><img class="menu-img" src="assets/glow-in-the-dough-textless.png"></a>
                 <h3>Drinks & Desserts</h3>
             </div>
         </div>
