--- a/P02 Team 03/order/pastas.html
+++ b/P02 Team 03/order/pastas.html
@@ -29,7 +29,53 @@
             <h1>**PIZZAS product page - TEMPLATE LANDING PAGE**</h1>
         </div>
 
+        <div class="top-border">
+            <h2>Pasta</h2>
 
+            <div class="flex-container">
+                <div class="flex-item">
+                    <img src="../assets/glow-in-the-dough-textless.png" style="max-width: 100%;">
+                </div>
+                <div class="flex-item">
+                    <h3>Size</h3>
+                    <input type="radio" id="op1" name="size">
+                    <label for="op1">Small</label>
+                    <input type="radio" id="op2" name="size">
+                    <label for="op2">Medium</label>
+                    <input type="radio" id="op3" name="size">
+                    <label for="op3">Large</label>
+
+                    <div class="bottom-border-pink"></div>
+
+                    <h3>Sauce</h3>
+                    <input type="radio" id="sauceop1" name="sauceop">
+                    <label for="sauceop1">Marinara</label><br>
+                    <input type="radio" id="sauceop2" name="sauceop">
+                    <label for="cheese">Alfredo Sauce</label><br>
+                    <input type="radio" id="sauceop3" name="sauceop">
+                    <label for="cheese">Garlic Parm</label><br>
+                    <input type="radio" id="sauceop4" name="sauceop">
+                    <label for="cheese">No Sauce*</label><br>
+
+                    <div class="bottom-border-pink"></div>
+
+                    <h3>Pasta Type</h3>
+                    <input type="radio" id="pastaop1" name="sauceop">
+                    <label for="sauceop1">Penne</label><br>
+                    <input type="radio" id="pastaop2" name="sauceop">
+                    <label for="cheese">Fettucini</label><br>
+                    
+
+                    <div class="bottom-border-pink"></div>
+                    <h3>Additional Instructions</h3>
+                    <input type="text"><br><br>
+
+                    <input type="submit" class="button-yellow" value="Add to Cart">
+
+                </div>
+            </div>
+            <div class="bottom-border"></div>
+        </div>
 
     </div>
 
