--- a/P02 Team 03/order/pizzas.html
+++ b/P02 Team 03/order/pizzas.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="top-border">
-            <h2>Glow-in-The-Dough House Special</h2>
+            <h2>Build Your Own</h2>
 
             <div class="flex-container">
                 <div class="flex-item">
