--- a/P02 Team 03/order/drinks-desserts.html
+++ b/P02 Team 03/order/drinks-desserts.html
@@ -26,10 +26,102 @@
     <div class="main-body">
         <!-- Title -->
         <div class="top-border">
-            <h1>**PIZZAS product page - TEMPLATE LANDING PAGE**</h1>
+            <h1>**Drinks/Desserts product page - TEMPLATE LANDING PAGE**</h1>
         </div>
 
+        <div class="menu-container top-border">
 
+            <!-- Item -->
+            <div>
+                <a href="../assets/glow-in-the-dough-textless.png"><img class="menu-img" src="../assets/glow-in-the-dough-textless.png"></a>
+                <h3>Coke</h3>
+                <select name="amount" id="Coke">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
+                <input type="submit" class="button-yellow" value="Add to Cart">
+            </div>
+                
+            <!-- Item -->
+            <div>
+                <a href="../assets/glow-in-the-dough-textless.png"><img class="menu-img" src="../assets/glow-in-the-dough-textless.png"></a>
+                <h3>Sprite</h3>
+                <select name="amount" id="Sprite">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
+                <input type="submit" class="button-yellow" value="Add to Cart">
+            </div>
+
+            <!-- Item -->
+            <div>
+                <a href="../assets/glow-in-the-dough-textless.png"><img class="menu-img" src="../assets/glow-in-the-dough-textless.png"></a>
+                <h3>Ginger Ale</h3>
+                <select name="amount" id="GingerAle">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
+                <input type="submit" class="button-yellow" value="Add to Cart">
+            </div>
+
+            <!-- Item -->
+            <div>
+                <a href="../assets/glow-in-the-dough-textless.png"><img class="menu-img" src="../assets/glow-in-the-dough-textless.png"></a>
+                <h3>Root Beer</h3>
+                <select name="amount" id="RootBeer">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
+                <input type="submit" class="button-yellow" value="Add to Cart">
+            </div>
+
+            <!-- Item -->
+            <div>
+                <a href="../assets/glow-in-the-dough-textless.png"><img class="menu-img" src="../assets/glow-in-the-dough-textless.png"></a>
+                <h3>Cheese Cake</h3>
+                <select name="amount" id="CheeseCake">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
+                <input type="submit" class="button-yellow" value="Add to Cart">
+            </div>
+
+            <!-- Item -->
+            <div>
+                <a href="../assets/glow-in-the-dough-textless.png"><img class="menu-img" src="../assets/glow-in-the-dough-textless.png"></a>
+                <h3>Chocolate Brownie</h3>
+                <select name="amount" id="ChocoBrown">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
+                <input type="submit" class="button-yellow" value="Add to Cart">
+            </div>
+
+            <!-- Item -->
+            <div>
+                <a href="../assets/glow-in-the-dough-textless.png"><img class="menu-img" src="../assets/glow-in-the-dough-textless.png"></a>
+                <h3>Chocolate Chip Cookies (8pc.)</h3>
+                <select name="amount" id="ChipCookie">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
+                <input type="submit" class="button-yellow" value="Add to Cart">
+            </div>
+        </div>
 
     </div>
 
