--- a/P02 Team 03/order/pastas.html
+++ b/P02 Team 03/order/pastas.html
@@ -26,7 +26,7 @@
     <div class="main-body">
         <!-- Title -->
         <div class="top-border">
-            <h1>**PIZZAS product page - TEMPLATE LANDING PAGE**</h1>
+            <h1>**Pastas product page - TEMPLATE LANDING PAGE**</h1>
         </div>
 
         <div class="top-border">
