media query added for nav bar responsiveness

--- a/P02 Team 03/cart.html
+++ b/P02 Team 03/cart.html
@@ -77,7 +77,10 @@
                 </div>
                 <div class="bottom-border"></div>
             </div>
-            <a href=checkout.html><input type="submit" class="button-yellow" value="Checkout"></a>
+            <div class="top-border">
+                <h3>Total: $41.98</h3>
+                <a href=checkout.html><input type="submit" class="button-yellow" value="Checkout"></a>
+            <div class="bottom-border"></div>
         </div>
 
 
