--- a/P02 Team 03/cart.html
+++ b/P02 Team 03/cart.html
@@ -76,11 +76,9 @@
                     </div>
                 </div>
                 <div class="bottom-border"></div>
-            </div>
-            <div class="top-border">
+            </div class="top-border">
                 <h3>Total: $41.98</h3>
                 <a href=checkout.html><input type="submit" class="button-yellow" value="Checkout"></a>
-            <div class="bottom-border"></div>
         </div>
 
 
