--- a/P02 Team 03/menu.html
+++ b/P02 Team 03/menu.html
@@ -36,22 +36,22 @@
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
+                <a href="order/pizzas.html"><img class="menu-img" src="assets/glow-in-the-dough-textless.png"></a>
                 <h3>Build your own Pizza</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
+                <a href=""><img class="menu-img" src="assets/glow-in-the-dough-textless.png"></a>
                 <h3>House Special</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
+                <a href=""><img class="menu-img" src="assets/glow-in-the-dough-textless.png"></a>
                 <h3>Pepperoni</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
+                <a href=""><img class="menu-img" src="assets/glow-in-the-dough-textless.png"></a>
                 <h3>Vegetarian</h3>
             </div>
             
@@ -61,12 +61,12 @@
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
+                <a href=""><img class="menu-img" src="assets/glow-in-the-dough-textless.png"></a>
                 <h3>Chicken Alfredo</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
+                <a href=""><img class="menu-img" src="assets/glow-in-the-dough-textless.png"></a>
                 <h3>Meatball Marinara</h3>
             </div>
 
@@ -85,22 +85,22 @@
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
+                <a href=""><img class="menu-img" src="assets/glow-in-the-dough-textless.png"></a>
                 <h3>Honey Garlic</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
+                <a href=""><img class="menu-img" src="assets/glow-in-the-dough-textless.png"></a>
                 <h3>Garlic Parmesan</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
+                <a href=""><img class="menu-img" src="assets/glow-in-the-dough-textless.png"></a>
                 <h3>Buffalo Hot</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
+                <a href=""><img class="menu-img" src="assets/glow-in-the-dough-textless.png"></a>
                 <h3>Salt and Pepper</h3>
             </div>
 
