gelato luxe citation added to style guide

--- a/P02 Team 03/style-guide.html
+++ b/P02 Team 03/style-guide.html
@@ -609,6 +609,7 @@
                     <li>CSS Tricks. A guide to flexbox <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">URL</a></li>
                     <li>Neon Desmon font from <a href="https://www.webprocomponents.com/neon-desmon-neon-light-font">URL</a></li>
                     <li>Text Glow generator used <a href="https://unused-css.com/tools/text-shadow-generator">URL</a></li>
+                    <li>Gelato Luxe font from Adobe Fonts. Retrieved from <a hred="https://fonts.adobe.com/fonts/gelato-luxe">URL</a></li>
                     <li>.....And other things learned from lecture/labs</li>
                   </ul>
             </div>
