--- a/P02 Team 03/order.html
+++ b/P02 Team 03/order.html
@@ -30,22 +30,22 @@
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
+                <a href="order/pizzas/build.html"><img src="assets/stock-pizza.jpg"></a>
                 <h3>Build your own Pizza</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
+                <a href="order/pizzas/house.html"><img src="assets/hou-pizza.jpg"></a>
                 <h3>House Special</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/pizzas/build.html"><img src="assets/glow-in-the-dough-textless.png"></a>
+                <a href="order/pizzas/pepperoni.html"><img src="assets/pep-pizza.jpg"></a>
                 <h3>Pepperoni</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
+                <a href="order/pizzas/veggie.html"><img src="assets/veg-pizza.jpg"></a>
                 <h3>Vegetarian</h3>
             </div>
             
@@ -55,12 +55,12 @@
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
+                <img src="assets/ca-pasta.jpg">
                 <h3>Chicken Alfredo</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
+                <img src="assets/mm-pasta.jpg">
                 <h3>Meatball Marinara</h3>
             </div>
 
@@ -75,30 +75,32 @@
         </div>
 
         <!-- Wings -->
-        <h2>Wings</h2>
+        <h2>Wings & Sides</h2>
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
-                <h3>Honey Garlic</h3>
+                <img src="assets/boneless-wings.jpg">
+                <h3>Boneless Wings</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
-                <h3>Garlic Parmesan</h3>
+                <img src="assets/wings.jpg">
+                <h3>Wings</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
-                <h3>Buffalo Hot</h3>
+                <img src="assets/breadsticks.jpg">
+                <h3>Bread Sticks</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/glow-in-the-dough-textless.png">
-                <h3>Salt and Pepper</h3>
+                <img src="assets/coke.png">
+                <h3>Drinks & Desserts</h3>
             </div>
 
         </div>
+
+        
 
 
     </div>
