--- a/P02 Team 03/order/pizzas/house.html
+++ b/P02 Team 03/order/pizzas/house.html
@@ -26,11 +26,11 @@
         <!-- Title -->
 
         <div class="top-border">
-            <h2>Build Your Own</h2>
+            <h2>House Special</h2>
 
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="../../assets/glow-in-the-dough-textless.png" style="max-width: 100%;">
+                    <img src="../../assets/hou-pizza.jpg" style="max-width: 100%;">
                 </div>
                 <div class="flex-item">
                     <h3>Size</h3>
