Pizza pages updated

--- a/P02 Team 03/order/pizzas/veggie.html
+++ b/P02 Team 03/order/pizzas/veggie.html
@@ -30,9 +30,11 @@
 
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="../../assets/glow-in-the-dough-textless.png" style="max-width: 100%;">
+                    <img src="../../assets/veg-pizza.jpg" style="max-width: 100%;">
                 </div>
                 <div class="flex-item">
+                    <h3>Description</h3>
+                    <p>Our vegetarian pizza topped with spinach, potatoes and marinara sauce</p>
                     <h3>Size</h3>
                     <input type="radio" id="op1" name="size">
                     <label for="op1">12"</label>
@@ -42,16 +44,12 @@
                     <label for="op3">18"</label>
 
                     <div class="bottom-border-pink"></div>
-
-                    <h3>Sauce</h3>
-                    <input type="radio" id="sauceop1" name="sauceop">
-                    <label for="sauceop1">Default (Pizza Sauce)</label><br>
-                    <input type="radio" id="sauceop2" name="sauceop">
-                    <label for="cheese">Alfredo Sauce</label><br>
-                    <input type="radio" id="sauceop3" name="sauceop">
-                    <label for="cheese">Garlic Parm</label><br>
-                    <input type="radio" id="sauceop4" name="sauceop">
-                    <label for="cheese">No Sauce*</label><br>
+                    
+                    <h3>Crust</h3>
+                    <input type="radio" id="crustop1" name="crustop">
+                    <label for="crustop1">Regular Pan</label><br>
+                    <input type="radio" id="crustop2" name="crustop">
+                    <label for="crustop2">Thin Crust</label><br>
 
                     <div class="bottom-border-pink"></div>
 
