--- a/P02 Team 03/order/pizzas/build.html
+++ b/P02 Team 03/order/pizzas/build.html
@@ -30,9 +30,11 @@
 
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="../../assets/glow-in-the-dough-textless.png" style="max-width: 100%;">
+                    <img src="../../assets/bld-pizza.jpg" style="max-width: 100%;">
                 </div>
                 <div class="flex-item">
+                    <h3>Description</h3>
+                    <p>Build your own Glow-in-the-Dough Pizza!</p>
                     <h3>Size</h3>
                     <input type="radio" id="op1" name="size">
                     <label for="op1">12"</label>
@@ -53,6 +55,14 @@
                     <input type="radio" id="sauceop4" name="sauceop">
                     <label for="cheese">No Sauce*</label><br>
 
+                    <div class="bottom-border-pink"></div>
+
+                    
+                    <h3>Crust</h3>
+                    <input type="radio" id="crustop1" name="crustop">
+                    <label for="crustop1">Regular Pan</label><br>
+                    <input type="radio" id="crustop2" name="crustop">
+                    <label for="crustop2">Thin Crust</label><br>
                     <div class="bottom-border-pink"></div>
 
                     <h3>Extra Toppings</h3>
