--- a/P02 Team 03/order/pizzas/house.html
+++ b/P02 Team 03/order/pizzas/house.html
@@ -26,13 +26,15 @@
         <!-- Title -->
 
         <div class="top-border">
-            <h2>House Special</h2>
+            <h2>House Special Pizza</h2>
 
             <div class="flex-container">
                 <div class="flex-item">
                     <img src="../../assets/hou-pizza.jpg" style="max-width: 100%;">
                 </div>
                 <div class="flex-item">
+                    <h3>Description</h3>
+                    <p>Our House special pizza comes with Marinara sauce topped with spinach, peopperoni, onions, mushrooms and mozarella chese</p>
                     <h3>Size</h3>
                     <input type="radio" id="op1" name="size">
                     <label for="op1">12"</label>
@@ -43,16 +45,11 @@
 
                     <div class="bottom-border-pink"></div>
 
-                    <h3>Sauce</h3>
-                    <input type="radio" id="sauceop1" name="sauceop">
-                    <label for="sauceop1">Default (Pizza Sauce)</label><br>
-                    <input type="radio" id="sauceop2" name="sauceop">
-                    <label for="cheese">Alfredo Sauce</label><br>
-                    <input type="radio" id="sauceop3" name="sauceop">
-                    <label for="cheese">Garlic Parm</label><br>
-                    <input type="radio" id="sauceop4" name="sauceop">
-                    <label for="cheese">No Sauce*</label><br>
-
+                    <h3>Crust</h3>
+                    <input type="radio" id="crustop1" name="crustop">
+                    <label for="crustop1">Regular Pan</label><br>
+                    <input type="radio" id="crustop2" name="crustop">
+                    <label for="crustop2">Thin Crust</label><br>
                     <div class="bottom-border-pink"></div>
 
                     <h3>Extra Toppings</h3>
