Pasta pages updated

--- a/P02 Team 03/order.html
+++ b/P02 Team 03/order.html
@@ -55,12 +55,12 @@
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <img src="assets/ca-pasta.jpg">
+                <a href="order/pastas/chicken-alfredo.html"><img src="assets/ca-pasta.jpg"></a>
                 <h3>Chicken Alfredo</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/mm-pasta.jpg">
+                <a href="order/pastas/meatball-marinara.html"><img src="assets/mm-pasta.jpg"></a>
                 <h3>Meatball Marinara</h3>
             </div>
 
