--- a/P02 Team 03/order/pastas/chicken-alfredo.html
+++ b/P02 Team 03/order/pastas/chicken-alfredo.html
@@ -3,37 +3,35 @@
 <head>
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/normalize.css"/>
-    <link rel="stylesheet" href="../css/flexbox.css"/>
-    <link rel="stylesheet" href="../css/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="../../css/main.css">
+    <link rel="stylesheet" href="../../css/normalize.css"/>
+    <link rel="stylesheet" href="../../css/flexbox.css"/>
+    <link rel="stylesheet" href="../../css/stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 
 <body>
     <!-- Navigation -->
     <nav class="main-nav">
-        <a href="../index.html" style="max-width: 15%;"><img src="../assets/glow-in-the-dough-textless.png"></a>
-        <a href="../order.html">ORDER</a>
-        <a href="../about-us.html">ABOUT US</a>
-        <a href="../contact.html">CONTACT</a>
-        <a href="../cart.html">CART</a>
+        <a href="../../index.html" style="max-width: 15%;"><img src="../../assets/glow-in-the-dough-textless.png"></a>
+        <a href="../../order.html">ORDER</a>
+        <a href="../../about-us.html">ABOUT US</a>
+        <a href="../../contact.html">CONTACT</a>
+        <a href="../../cart.html">CART</a>
     </nav>
 
     <!-- Header End ////////////////////////////////////////  -->
 
     <div class="main-body">
         <!-- Title -->
-        <div class="top-border">
-            <h1>**Pastas product page - TEMPLATE LANDING PAGE**</h1>
-        </div>
+
 
         <div class="top-border">
-            <h2>Pasta</h2>
+            <h2>Chicken Alfredo Pasta</h2>
 
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="../assets/glow-in-the-dough-textless.png" style="max-width: 100%;">
+                    <img src="../../assets/ca-pasta.jpg" style="max-width: 100%;">
                 </div>
                 <div class="flex-item">
                     <h3>Size</h3>
@@ -46,23 +44,19 @@
 
                     <div class="bottom-border-pink"></div>
 
-                    <h3>Sauce</h3>
-                    <input type="radio" id="sauceop1" name="sauceop">
-                    <label for="sauceop1">Marinara</label><br>
-                    <input type="radio" id="sauceop2" name="sauceop">
-                    <label for="cheese">Alfredo Sauce</label><br>
-                    <input type="radio" id="sauceop3" name="sauceop">
-                    <label for="cheese">Garlic Parm</label><br>
-                    <input type="radio" id="sauceop4" name="sauceop">
-                    <label for="cheese">No Sauce*</label><br>
-
-                    <div class="bottom-border-pink"></div>
-
                     <h3>Pasta Type</h3>
                     <input type="radio" id="pastaop1" name="sauceop">
                     <label for="sauceop1">Penne</label><br>
                     <input type="radio" id="pastaop2" name="sauceop">
                     <label for="cheese">Fettucini</label><br>
+
+                    <div class="bottom-border-pink"></div>
+
+                    <h3>Add Breadsticks (4 pcs.)</h3>
+                    <input type="radio" id="bread1" name="breadop">
+                    <label for="bread1">Yes (+$3)</label><br>
+                    <input type="radio" id="bread2" name="breadop">
+                    <label for="bread2">No, thanks</label><br>
                     
 
                     <div class="bottom-border-pink"></div>
