Sides/Drinks/Desserts

--- a/P02 Team 03/order.html
+++ b/P02 Team 03/order.html
@@ -79,22 +79,22 @@
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <img src="assets/boneless-wings.jpg">
+                <a href="order/wings/boneless-wings.html"><img src="assets/boneless-wings.jpg"></a>
                 <h3>Boneless Wings</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/wings.jpg">
+                <a href="order/wings/wings.html"><img src="assets/wings.jpg"></a>
                 <h3>Wings</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/breadsticks.jpg">
+                <a href="order/breadsticks.html"><img src="assets/breadsticks.jpg"></a>
                 <h3>Bread Sticks</h3>
             </div>
 
             <div class="flex-item">
-                <img src="assets/coke.png">
+                <a href="order/drinks-desserts.html"><img src="assets/coke.png"></a>
                 <h3>Drinks & Desserts</h3>
             </div>
 
