--- a/P02 Team 03/order/drinks-desserts.html
+++ b/P02 Team 03/order/drinks-desserts.html
@@ -24,16 +24,13 @@
 
     <div class="main-body">
         <!-- Title -->
-        <div class="top-border">
-            <h1>**Drinks/Desserts product page - TEMPLATE LANDING PAGE**</h1>
-        </div>
-
+        <h2>Drinks & Desserts</h2>
         <div class="menu-container top-border">
 
             <!-- Item -->
             <div>
-                <a href="../assets/glow-in-the-dough-textless.png"><img class="menu-img" src="../assets/glow-in-the-dough-textless.png"></a>
-                <h3>Coke</h3>
+                <img class="menu-img" src="../assets/coke.png">
+                <h3>$4 - Coke</h3>
                 <select name="amount" id="Coke">
                     <option value="1">1</option>
                     <option value="2">2</option>
@@ -45,8 +42,8 @@
                 
             <!-- Item -->
             <div>
-                <a href="../assets/glow-in-the-dough-textless.png"><img class="menu-img" src="../assets/glow-in-the-dough-textless.png"></a>
-                <h3>Sprite</h3>
+                <img class="menu-img" src="../assets/sprite.png">
+                <h3>$4 - Sprite</h3>
                 <select name="amount" id="Sprite">
                     <option value="1">1</option>
                     <option value="2">2</option>
@@ -58,8 +55,8 @@
 
             <!-- Item -->
             <div>
-                <a href="../assets/glow-in-the-dough-textless.png"><img class="menu-img" src="../assets/glow-in-the-dough-textless.png"></a>
-                <h3>Ginger Ale</h3>
+                <img class="menu-img" src="../assets/gingerale.png">
+                <h3>$4 - Ginger Ale</h3>
                 <select name="amount" id="GingerAle">
                     <option value="1">1</option>
                     <option value="2">2</option>
@@ -71,8 +68,8 @@
 
             <!-- Item -->
             <div>
-                <a href="../assets/glow-in-the-dough-textless.png"><img class="menu-img" src="../assets/glow-in-the-dough-textless.png"></a>
-                <h3>Root Beer</h3>
+                <img class="menu-img" src="../assets/rootbeer.png">
+                <h3>$4 - Root Beer</h3>
                 <select name="amount" id="RootBeer">
                     <option value="1">1</option>
                     <option value="2">2</option>
@@ -84,8 +81,8 @@
 
             <!-- Item -->
             <div>
-                <a href="../assets/glow-in-the-dough-textless.png"><img class="menu-img" src="../assets/glow-in-the-dough-textless.png"></a>
-                <h3>Cheese Cake</h3>
+                <img class="menu-img" src="../assets/cheesecake.jpg">
+                <h3>$6 - Cheese Cake (1 Slice)</h3>
                 <select name="amount" id="CheeseCake">
                     <option value="1">1</option>
                     <option value="2">2</option>
@@ -97,8 +94,8 @@
 
             <!-- Item -->
             <div>
-                <a href="../assets/glow-in-the-dough-textless.png"><img class="menu-img" src="../assets/glow-in-the-dough-textless.png"></a>
-                <h3>Chocolate Brownie</h3>
+                <img class="menu-img" src="../assets/brownie.jpg">
+                <h3>$6 - hocolate Brownie (3 pcs.)</h3>
                 <select name="amount" id="ChocoBrown">
                     <option value="1">1</option>
                     <option value="2">2</option>
@@ -110,8 +107,8 @@
 
             <!-- Item -->
             <div>
-                <a href="../assets/glow-in-the-dough-textless.png"><img class="menu-img" src="../assets/glow-in-the-dough-textless.png"></a>
-                <h3>Chocolate Chip Cookies (8pc.)</h3>
+                <img class="menu-img" src="../assets/cookie.jpg">
+                <h3>$6 - Chocolate Chip Cookies (8pc.)</h3>
                 <select name="amount" id="ChipCookie">
                     <option value="1">1</option>
                     <option value="2">2</option>
