--- a/P02 Team 03/order/pastas/meatball-marinara.html
+++ b/P02 Team 03/order/pastas/meatball-marinara.html
@@ -34,6 +34,8 @@
                     <img src="../../assets/mm-pasta.jpg" style="max-width: 100%;">
                 </div>
                 <div class="flex-item">
+                    <h3>Description</h3>
+                    <p>Our tomato-basil based sauce with house special meatballs</p>
                     <h3>Size</h3>
                     <input type="radio" id="op1" name="size">
                     <label for="op1">Small</label>
