--- a/P02 Team 03/order/breadsticks.html
+++ b/P02 Team 03/order/breadsticks.html
@@ -25,52 +25,48 @@
     <div class="main-body">
         <!-- Title -->
 
-
         <div class="top-border">
-            <h2>Chicken Alfredo Pasta</h2>
 
+            <!-- Breadsticks -->
+            <h2>Bread Sticks</h2>
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="../../assets/ca-pasta.jpg" style="max-width: 100%;">
+                    <img src="../../assets/breadsticks.jpg" style="max-width: 100%;">
                 </div>
                 <div class="flex-item">
                     <h3>Description</h3>
-                    <p>Our creamy alfredo sauce top with a pan seared chicken breast, topped with parmesan cheese</p>
-                    <h3>Size</h3>
+                    <p>Made with pizza dough, our breadsticks are baked to perfection and finished off with garlic and parmesan bits</p>
+                    <h3>Amount</h3>
                     <input type="radio" id="op1" name="size">
-                    <label for="op1">Small</label>
+                    <label for="op1">4pcs.</label>
                     <input type="radio" id="op2" name="size">
-                    <label for="op2">Medium</label>
+                    <label for="op2">6pcs.</label>
                     <input type="radio" id="op3" name="size">
-                    <label for="op3">Large</label>
+                    <label for="op3">8pcs.</label>
 
                     <div class="bottom-border-pink"></div>
 
-                    <h3>Pasta Type</h3>
-                    <input type="radio" id="pastaop1" name="sauceop">
-                    <label for="sauceop1">Penne</label><br>
-                    <input type="radio" id="pastaop2" name="sauceop">
-                    <label for="cheese">Fettucini</label><br>
-
-                    <div class="bottom-border-pink"></div>
-
-                    <h3>Add Breadsticks (4 pcs.)</h3>
-                    <input type="radio" id="bread1" name="breadop">
-                    <label for="bread1">Yes (+$3)</label><br>
-                    <input type="radio" id="bread2" name="breadop">
-                    <label for="bread2">No, thanks</label><br>
+                    <h3>Dips</h3>
+                    <input type="radio" id="sauceop1" name="sauceop">
+                    <label for="sauceop1">Ranch</label><br>
+                    <input type="radio" id="sauceop2" name="sauceop">
+                    <label for="cheese">Garlic</label><br>
+                    <input type="radio" id="sauceop3" name="sauceop">
+                    <label for="cheese">Cheese</label><br>
                     
-
-                    <div class="bottom-border-pink"></div>
-                    <h3>Additional Instructions</h3>
-                    <input type="text"><br><br>
+                    <br><br>
 
                     <input type="submit" class="button-yellow" value="Add to Cart">
 
                 </div>
             </div>
+
             <div class="bottom-border"></div>
         </div>
+
+        
+
+
 
     </div>
 
