--- a/P02 Team 03/order/wings/wings.html
+++ b/P02 Team 03/order/wings/wings.html
@@ -3,21 +3,21 @@
 <head>
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/normalize.css"/>
-    <link rel="stylesheet" href="../css/flexbox.css"/>
-    <link rel="stylesheet" href="../css/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="../../css/main.css">
+    <link rel="stylesheet" href="../../css/normalize.css"/>
+    <link rel="stylesheet" href="../../css/flexbox.css"/>
+    <link rel="stylesheet" href="../../css/stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 
 <body>
     <!-- Navigation -->
     <nav class="main-nav">
-        <a href="../index.html" style="max-width: 15%;"><img src="../assets/glow-in-the-dough-textless.png"></a>
-        <a href="../order.html">ORDER</a>
-        <a href="../about-us.html">ABOUT US</a>
-        <a href="../contact.html">CONTACT</a>
-        <a href="../cart.html">CART</a>
+        <a href="../../index.html" style="max-width: 15%;"><img src="../../assets/glow-in-the-dough-textless.png"></a>
+        <a href="../../order.html">ORDER</a>
+        <a href="../../about-us.html">ABOUT US</a>
+        <a href="../../contact.html">CONTACT</a>
+        <a href="../../cart.html">CART</a>
     </nav>
 
     <!-- Header End ////////////////////////////////////////  -->
@@ -25,52 +25,15 @@
     <div class="main-body">
         <!-- Title -->
         <div class="top-border">
-            <h1>**Sides product page - TEMPLATE LANDING PAGE**</h1>
-        </div>
-
-        <div class="top-border">
-
-            <!-- Breadsticks -->
-            <h2>Bread Sticks</h2>
-            <div class="flex-container">
-                <div class="flex-item">
-                    <img src="../assets/glow-in-the-dough-textless.png" style="max-width: 100%;">
-                </div>
-                <div class="flex-item">
-
-                    <h3>Amount</h3>
-                    <input type="radio" id="op1" name="size">
-                    <label for="op1">4pcs.</label>
-                    <input type="radio" id="op2" name="size">
-                    <label for="op2">6pcs.</label>
-                    <input type="radio" id="op3" name="size">
-                    <label for="op3">8pcs.</label>
-
-                    <div class="bottom-border-pink"></div>
-
-                    <h3>Dips</h3>
-                    <input type="radio" id="sauceop1" name="sauceop">
-                    <label for="sauceop1">Ranch</label><br>
-                    <input type="radio" id="sauceop2" name="sauceop">
-                    <label for="cheese">Garlic</label><br>
-                    <input type="radio" id="sauceop3" name="sauceop">
-                    <label for="cheese">Cheese</label><br>
-                    
-                    <br><br>
-
-                    <input type="submit" class="button-yellow" value="Add to Cart">
-
-                </div>
-            </div>
-
             <!-- Wings -->
             <h2>Wings</h2>
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="../assets/glow-in-the-dough-textless.png" style="max-width: 100%;">
+                    <img src="../../assets/wings.jpg" style="max-width: 100%;">
                 </div>
                 <div class="flex-item">
-
+                    <h3>Description</h3>
+                    <p>Our classic deepfried hand tossed chicken wings!</p>
                     <h3>Size</h3>
                     <input type="radio" id="op1" name="size">
                     <label for="op1">5pc.</label>
