--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -31,7 +31,7 @@
         <div class="flex-container">
 
             <div class="flex-item">
-                <img class="menu-img" src="assets/glow-in-the-dough.png">
+                <a href="about-us.html"><img class="menu-img" src="assets/glow-in-the-dough.png"></a>
 
             </div>
 
