--- a/P02 Team 03/order.html
+++ b/P02 Team 03/order.html
@@ -30,22 +30,22 @@
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <a href="order/pizzas/build.html"><img src="assets/stock-pizza.jpg"></a>
+                <a href="order/pizzas/build.html"><img class="menu-img" src="assets/stock-pizza.jpg"></a>
                 <h3>Build your own Pizza</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/pizzas/house.html"><img src="assets/hou-pizza.jpg"></a>
+                <a href="order/pizzas/house.html"><img class="menu-img" img src="assets/hou-pizza.jpg"></a>
                 <h3>House Special</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/pizzas/pepperoni.html"><img src="assets/pep-pizza.jpg"></a>
+                <a href="order/pizzas/pepperoni.html"><img class="menu-img" img src="assets/pep-pizza.jpg"></a>
                 <h3>Pepperoni</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/pizzas/veggie.html"><img src="assets/veg-pizza.jpg"></a>
+                <a href="order/pizzas/veggie.html"><img class="menu-img" img src="assets/veg-pizza.jpg"></a>
                 <h3>Vegetarian</h3>
             </div>
             
@@ -55,12 +55,12 @@
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <a href="order/pastas/chicken-alfredo.html"><img src="assets/ca-pasta.jpg"></a>
+                <a href="order/pastas/chicken-alfredo.html"><img class="menu-img" img src="assets/ca-pasta.jpg"></a>
                 <h3>Chicken Alfredo</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/pastas/meatball-marinara.html"><img src="assets/mm-pasta.jpg"></a>
+                <a href="order/pastas/meatball-marinara.html"><img class="menu-img" img src="assets/mm-pasta.jpg"></a>
                 <h3>Meatball Marinara</h3>
             </div>
 
@@ -79,22 +79,22 @@
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <a href="order/wings/boneless-wings.html"><img src="assets/boneless-wings.jpg"></a>
+                <a href="order/wings/boneless-wings.html"><img class="menu-img" img src="assets/boneless-wings.jpg"></a>
                 <h3>Boneless Wings</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/wings/wings.html"><img src="assets/wings.jpg"></a>
+                <a href="order/wings/wings.html"><img class="menu-img" img src="assets/wings.jpg"></a>
                 <h3>Wings</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/breadsticks.html"><img src="assets/breadsticks.jpg"></a>
+                <a href="order/breadsticks.html"><img class="menu-img" img src="assets/breadsticks.jpg"></a>
                 <h3>Bread Sticks</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/drinks-desserts.html"><img src="assets/coke.png"></a>
+                <a href="order/drinks-desserts.html"><img class="menu-img" img src="assets/coke.png"></a>
                 <h3>Drinks & Desserts</h3>
             </div>
 
