--- a/P02 Team 03/order/drinks-desserts.html
+++ b/P02 Team 03/order/drinks-desserts.html
@@ -29,7 +29,7 @@
 
             <!-- Item -->
             <div>
-                <img class="menu-img" src="../assets/coke.png">
+                <img src="../assets/coke.png">
                 <h3>$4 - Coke</h3>
                 <select name="amount" id="Coke">
                     <option value="1">1</option>
@@ -42,7 +42,7 @@
                 
             <!-- Item -->
             <div>
-                <img class="menu-img" src="../assets/sprite.png">
+                <img src="../assets/sprite.png">
                 <h3>$4 - Sprite</h3>
                 <select name="amount" id="Sprite">
                     <option value="1">1</option>
@@ -55,7 +55,7 @@
 
             <!-- Item -->
             <div>
-                <img class="menu-img" src="../assets/gingerale.png">
+                <img src="../assets/gingerale.png">
                 <h3>$4 - Ginger Ale</h3>
                 <select name="amount" id="GingerAle">
                     <option value="1">1</option>
@@ -68,7 +68,7 @@
 
             <!-- Item -->
             <div>
-                <img class="menu-img" src="../assets/rootbeer.png">
+                <img src="../assets/rootbeer.png">
                 <h3>$4 - Root Beer</h3>
                 <select name="amount" id="RootBeer">
                     <option value="1">1</option>
@@ -81,7 +81,7 @@
 
             <!-- Item -->
             <div>
-                <img class="menu-img" src="../assets/cheesecake.jpg">
+                <img src="../assets/cheesecake.jpg">
                 <h3>$6 - Cheese Cake (1 Slice)</h3>
                 <select name="amount" id="CheeseCake">
                     <option value="1">1</option>
@@ -94,7 +94,7 @@
 
             <!-- Item -->
             <div>
-                <img class="menu-img" src="../assets/brownie.jpg">
+                <img src="../assets/brownie.jpg">
                 <h3>$6 - hocolate Brownie (3 pcs.)</h3>
                 <select name="amount" id="ChocoBrown">
                     <option value="1">1</option>
@@ -107,7 +107,7 @@
 
             <!-- Item -->
             <div>
-                <img class="menu-img" src="../assets/cookie.jpg">
+                <img src="../assets/cookie.jpg">
                 <h3>$6 - Chocolate Chip Cookies (8pc.)</h3>
                 <select name="amount" id="ChipCookie">
                     <option value="1">1</option>
