--- a/P02 Team 03/cart.html
+++ b/P02 Team 03/cart.html
@@ -25,13 +25,11 @@
     <div class="main-body">
         <!-- Title -->
         <div class="top-border">
-            <h1>**CART - TEMPLATE LANDING PAGE**</h1>
-            <div class="top-border">
                 <h2>Glow-in-The-Dough House Special</h2>
 
                 <div class="flex-container">
                     <div class="flex-item">
-                        <img src="assets/glow-in-the-dough-textless.png" style="max-width: 100%;">
+                        <img src="assets/hou-pizza.jpg" style="max-width: 100%;">
                     </div>
                     <div class="flex-item">
                         <h3>Product Amount</h3>
@@ -56,7 +54,7 @@
 
                 <div class="flex-container">
                     <div class="flex-item">
-                        <img src="assets/glow-in-the-dough-textless.png" style="max-width: 100%;">
+                        <img src="assets/pep-pizza.jpg" style="max-width: 100%;">
                     </div>
                     <div class="flex-item">
                         <h3>Product Amount</h3>
@@ -79,10 +77,6 @@
                 <h3>Total: $41.98</h3>
                 <a href=checkout.html><input type="submit" class="button-yellow" value="Checkout"></a>
         </div>
-
-
-
-    </div>
 
     <!-- Footer Start ////////////////////////////////////////  -->
 
