--- a/P02 Team 03/order/breadsticks.html
+++ b/P02 Team 03/order/breadsticks.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../css/flexbox.css"/>
     <link rel="stylesheet" href="../../css/stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <script src="../js/scripts.js"></script>
 </head>
 
 <body>
@@ -56,7 +57,7 @@
                     
                     <br><br>
 
-                    <input type="submit" class="button-yellow" value="Add to Cart">
+                    <input type="submit" class="button-yellow" value="Add to Cart" onclick="cartAlert()">
 
                 </div>
             </div>
