--- a/P02 Team 03/order/drinks-desserts.html
+++ b/P02 Team 03/order/drinks-desserts.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/flexbox.css"/>
     <link rel="stylesheet" href="../css/stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <script src="../js/scripts.js"></script>
 </head>
 
 <body>
@@ -37,7 +38,7 @@
                     <option value="3">3</option>
                     <option value="4">4</option>
                 </select>
-                <input type="submit" class="button-yellow" value="Add to Cart">
+                <input type="submit" class="button-yellow" value="Add to Cart" onclick="cartAlert()">
             </div>
                 
             <!-- Item -->
@@ -50,7 +51,7 @@
                     <option value="3">3</option>
                     <option value="4">4</option>
                 </select>
-                <input type="submit" class="button-yellow" value="Add to Cart">
+                <input type="submit" class="button-yellow" value="Add to Cart" onclick="cartAlert()">
             </div>
 
             <!-- Item -->
@@ -63,7 +64,7 @@
                     <option value="3">3</option>
                     <option value="4">4</option>
                 </select>
-                <input type="submit" class="button-yellow" value="Add to Cart">
+                <input type="submit" class="button-yellow" value="Add to Cart" onclick="cartAlert()">
             </div>
 
             <!-- Item -->
@@ -76,7 +77,7 @@
                     <option value="3">3</option>
                     <option value="4">4</option>
                 </select>
-                <input type="submit" class="button-yellow" value="Add to Cart">
+                <input type="submit" class="button-yellow" value="Add to Cart" onclick="cartAlert()">
             </div>
 
             <!-- Item -->
@@ -89,7 +90,7 @@
                     <option value="3">3</option>
                     <option value="4">4</option>
                 </select>
-                <input type="submit" class="button-yellow" value="Add to Cart">
+                <input type="submit" class="button-yellow" value="Add to Cart" onclick="cartAlert()">
             </div>
 
             <!-- Item -->
@@ -102,7 +103,7 @@
                     <option value="3">3</option>
                     <option value="4">4</option>
                 </select>
-                <input type="submit" class="button-yellow" value="Add to Cart">
+                <input type="submit" class="button-yellow" value="Add to Cart" onclick="cartAlert()">
             </div>
 
             <!-- Item -->
@@ -115,7 +116,7 @@
                     <option value="3">3</option>
                     <option value="4">4</option>
                 </select>
-                <input type="submit" class="button-yellow" value="Add to Cart">
+                <input type="submit" class="button-yellow" value="Add to Cart" onclick="cartAlert()">
             </div>
         </div>
 
