--- a/P02 Team 03/order/pastas/chicken-alfredo.html
+++ b/P02 Team 03/order/pastas/chicken-alfredo.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../../css/flexbox.css"/>
     <link rel="stylesheet" href="../../css/stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <script src="../../js/scripts.js"></script>
+
 </head>
 
 <body>
@@ -65,7 +67,7 @@
                     <h3>Additional Instructions</h3>
                     <input type="text"><br><br>
 
-                    <input type="submit" class="button-yellow" value="Add to Cart">
+                    <input type="submit" class="button-yellow" value="Add to Cart" onclick="cartAlert()">
 
                 </div>
             </div>
