--- a/P02 Team 03/order/breadsticks.html
+++ b/P02 Team 03/order/breadsticks.html
@@ -3,10 +3,10 @@
 <head>
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/normalize.css"/>
-    <link rel="stylesheet" href="../../css/flexbox.css"/>
-    <link rel="stylesheet" href="../../css/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/normalize.css"/>
+    <link rel="stylesheet" href="../css/flexbox.css"/>
+    <link rel="stylesheet" href="../css/stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <script src="../js/scripts.js"></script>
 </head>
@@ -14,11 +14,11 @@
 <body>
     <!-- Navigation -->
     <nav class="main-nav">
-        <a href="../../index.html" style="max-width: 15%;"><img src="../../assets/glow-in-the-dough-textless.png"></a>
-        <a href="../../order.html">ORDER</a>
-        <a href="../../about-us.html">ABOUT US</a>
-        <a href="../../contact.html">CONTACT</a>
-        <a href="../../cart.html">CART</a>
+        <a href="../index.html" style="max-width: 15%;"><img src="../assets/glow-in-the-dough-textless.png"></a>
+        <a href="../order.html">ORDER</a>
+        <a href="../about-us.html">ABOUT US</a>
+        <a href="../contact.html">CONTACT</a>
+        <a href="../cart.html">CART</a>
     </nav>
 
     <!-- Header End ////////////////////////////////////////  -->
