star rating added

--- a/P02 Team 03/order/drinks-desserts.html
+++ b/P02 Team 03/order/drinks-desserts.html
@@ -96,7 +96,7 @@
             <!-- Item -->
             <div>
                 <img src="../assets/brownie.jpg">
-                <h3>$6 - hocolate Brownie (3 pcs.)</h3>
+                <h3>$6 - Chocolate Brownie (3 pcs.)</h3>
                 <select name="amount" id="ChocoBrown">
                     <option value="1">1</option>
                     <option value="2">2</option>
