--- a/P02 Team 03/order/pastas/chicken-alfredo.html
+++ b/P02 Team 03/order/pastas/chicken-alfredo.html
@@ -38,6 +38,19 @@
                 <div class="flex-item">
                     <h3>Description</h3>
                     <p>Our creamy alfredo sauce top with a pan seared chicken breast, topped with parmesan cheese</p>
+                    <div class="rate">
+                        <input type="radio" id="star5" name="rate" value="5" />
+                        <label for="star5" title="text">5 stars</label>
+                        <input type="radio" id="star4" name="rate" value="4" />
+                        <label for="star4" title="text">4 stars</label>
+                        <input type="radio" id="star3" name="rate" value="3" />
+                        <label for="star3" title="text">3 stars</label>
+                        <input type="radio" id="star2" name="rate" value="2" />
+                        <label for="star2" title="text">2 stars</label>
+                        <input type="radio" id="star1" name="rate" value="1" />
+                        <label for="star1" title="text">1 star</label>
+                      </div>
+                      <br><br><br><br>
                     <h3>Size</h3>
                     <input type="radio" id="op1" name="size">
                     <label for="op1">Small</label>
